--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ astroid==1.4.9
 click==6.7
 Flask==0.12
 Flask-GraphQL==1.4.1
+graphene==1.2
 graphql-core==1.0.1
+graphql-relay==0.4.5
 isort==4.2.5
 itsdangerous==0.24
 Jinja2==2.9.5
