--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "babel": {
-  },
+  "babel": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/PatagoniaPythonMeetup/fixture_robots.git"
@@ -22,6 +21,13 @@
     "babel": "^6.23.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
+    "css-loader": "^0.28.0",
+    "imports-loader": "^0.7.1",
+    "style-loader": "^0.16.1",
     "webpack": "^2.3.3"
+  },
+  "dependencies": {
+    "jquery": "^3.2.1",
+    "jquery-bracket": "^0.11.0"
   }
 }
