--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "imports-loader": "^0.7.1",
     "lokka": "^1.7.0",
     "lokka-transport-http": "^1.6.1",
+    "node-sass": "^4.5.2",
+    "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
     "webpack": "^2.3.3"
   },
