--- a/package.json
+++ b/package.json
@@ -40,6 +40,13 @@
   },
   "dependencies": {
     "jquery": "^3.2.1",
-    "react": "^15.5.4"
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
+    "react-router": "^4.1.0",
+    "react-router-dom": "^4.1.0",
+    "redux": "^3.6.0",
+    "redux-act": "^1.1.1",
+    "redux-saga": "^0.14.6"
   }
 }
