--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-sass": "^4.5.2",
     "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^6.0.3",
+    "semantic-ui": "^2.2.10",
     "style-loader": "^0.16.1",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
@@ -48,6 +49,8 @@
     "react-router-dom": "^4.1.0",
     "redux": "^3.6.0",
     "redux-act": "^1.1.1",
-    "redux-saga": "^0.14.6"
+    "redux-saga": "^0.14.6",
+    "semantic-ui-css": "^2.2.10",
+    "semantic-ui-react": "^0.68.0"
   }
 }
