--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "apollo-angular": "^0.13.0",
     "apollo-client": "^1.9.0-0",
     "core-js": "^2.4.1",
+    "lodash": "^4.17.4",
     "rxjs": "^5.1.0",
     "semantic-ui-css": "^2.2.11",
     "zone.js": "^0.8.4"
