Migrando backend y frontend
Migrando backend y frontend a nuevas version Angular y Python
Falta debuggear

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
@@ -13,8 +14,8 @@
     ],
     "lib": [
       "es2017",
-      "esnext",
-      "dom"
+      "dom",
+      "esnext.asynciterable"
     ]
   }
 }
