--- a/client/package.json
+++ b/client/package.json
@@ -1,58 +1,58 @@
 {
-    "name": "client",
-    "version": "0.0.0",
-    "license": "MIT",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve --host 0.0.0.0",
-        "build": "ng build",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e",
-        "schema:download": "apollo-codegen download-schema http://localhost:5000/fixture --output schema.json",
-        "schema:generate": "apollo-codegen generate src/graphql/*.graphql --schema schema.json --target typescript --output src/graphql/schema.ts"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^4.2.4",
-        "@angular/common": "^4.2.4",
-        "@angular/compiler": "^4.2.4",
-        "@angular/core": "^4.2.4",
-        "@angular/forms": "^4.2.4",
-        "@angular/http": "^4.2.4",
-        "@angular/platform-browser": "^4.2.4",
-        "@angular/platform-browser-dynamic": "^4.2.4",
-        "@angular/router": "^4.2.4",
-        "apollo-angular": "^0.13.0",
-        "apollo-client": "^1.9.1",
-        "core-js": "^2.4.1",
-        "graphql-tag": "^2.4.2",
-        "jquery": "^3.2.1",
-        "lodash": "^4.17.4",
-        "rxjs": "^5.4.2",
-        "zone.js": "^0.8.14"
-    },
-    "devDependencies": {
-        "@angular/cli": "1.3.0",
-        "@angular/compiler-cli": "^4.2.4",
-        "@angular/language-service": "^4.2.4",
-        "@types/jasmine": "~2.5.53",
-        "@types/jasminewd2": "~2.0.2",
-        "@types/node": "~6.0.60",
-        "apollo-codegen": "^0.16.5",
-        "codelyzer": "~3.1.1",
-        "jasmine-core": "~2.6.2",
-        "jasmine-spec-reporter": "~4.1.0",
-        "karma": "~1.7.0",
-        "karma-chrome-launcher": "~2.1.1",
-        "karma-cli": "~1.0.1",
-        "karma-coverage-istanbul-reporter": "^1.2.1",
-        "karma-jasmine": "~1.1.0",
-        "karma-jasmine-html-reporter": "^0.2.2",
-        "protractor": "~5.1.2",
-        "semantic-ui-css": "^2.2.12",
-        "ts-node": "~3.2.0",
-        "tslint": "~5.3.2",
-        "typescript": "~2.3.3"
-    }
+  "name": "client",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^6.0.0",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.0",
+    "@angular/http": "^6.0.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
+    "@angular/router": "^6.0.0",
+    "apollo-angular": "^1.4.1",
+    "apollo-angular-link-http": "^1.3.1",
+    "apollo-cache-inmemory": "^1.3.2",
+    "apollo-client": "^2.4.0",
+    "apollo-link": "^1.2.0",
+    "core-js": "^2.5.4",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.10.0",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
+    "rxjs": "^6.0.0",
+    "zone.js": "^0.8.26"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.0",
+    "@angular/cli": "~6.2.5",
+    "@angular/compiler-cli": "^6.0.0",
+    "@angular/language-service": "^6.0.0",
+    "@types/jasmine": "~2.8.6",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.2.1",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~1.7.1",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~1.4.2",
+    "karma-jasmine": "~1.1.1",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.3.0",
+    "semantic-ui-css": "^2.4.0",
+    "ts-node": "~5.0.1",
+    "tslint": "~5.9.1",
+    "typescript": "^2.9.2"
+  }
 }
