--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
+aniso8601==6.0.0
 click==6.7
 Faker==0.7.17
 Flask==0.12.2
 Flask-Cors==3.0.3
 Flask-GraphQL==1.4.1
-graphene==1.4.1
-graphql-core==1.1
+graphene==2.1.6
+graphql-core==2.2
 graphql-relay==0.4.5
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
-promise==2.0.2
+promise==2.2.1
 python-dateutil==2.6.0
+recordclass==0.4.3
+Rx==1.6.1
 six==1.10.0
 typing==3.6.1
 Werkzeug==0.12.2
-recordclass==0.4.3
