Dependencias del semaforo

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 aniso8601==6.0.0
+certifi==2019.6.16
+chardet==3.0.4
 click==6.7
+docutils==0.14
 Faker==0.7.17
 Flask==0.12.2
 Flask-Cors==3.0.3
@@ -7,13 +10,20 @@ Flask-GraphQL==1.4.1
 graphene==2.1.6
 graphql-core==2.2
 graphql-relay==0.4.5
+idna==2.8
 itsdangerous==0.24
 Jinja2==2.9.6
+Kivy==1.11.1
+Kivy-Garden==0.1.4
 MarkupSafe==1.0
 promise==2.2.1
+pygame==1.9.6
+Pygments==2.4.2
 python-dateutil==2.6.0
 recordclass==0.4.3
+requests==2.22.0
 Rx==1.6.1
 six==1.10.0
 typing==3.6.1
+urllib3==1.25.3
 Werkzeug==0.12.2
